<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class ClientLookupCode extends Model
{
    protected $fillable = [
        'email', 'code', 'attempts', 'expires_at', 'used_at', 'ip_address',
    ];

    protected $casts = [
        'expires_at' => 'datetime',
        'used_at' => 'datetime',
    ];

    public function isExpired(): bool
    {
        return $this->expires_at->isPast();
    }

    public function isUsed(): bool
    {
        return $this->used_at !== null;
    }

    public function isValid(): bool
    {
        return ! $this->isExpired() && ! $this->isUsed() && $this->attempts < 5;
    }
}
